# discord-bots

./: .gitignore
gmovies/: movies.txt  noxfile.py  pyproject.toml
gmovies/gmovies/: entities.py  main.py  movies.py
gmovies/gmovies/db/: shelve.py
